libgcc/ 	PR target/52505 	* config/avr/lib1funcs.S (__xload_1): Don't read unintentionally 	from RAM.

gcc/
	PR target/52505
	* config/avr/avr.c (avr_out_xload): Don't read unintentionally
	from RAM.
	* config/avr/avr.md (xload_8): Adjust insn length.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@185031 138bc75d-0d04-0410-961f-82ee72b054a4